# llm-eval-platform

./: .env.example  .gitattributes  .gitignore  .repoinfo  ARCHITECTURE.md  GUIDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/: goldset_template.jsonl  sample_candidates.jsonl  sample_eval.jsonl
handcode/: README.md  verify_stats.py
src/evalplatform/: __init__.py  cli.py  config.py  models.py
src/evalplatform/datasets/: __init__.py  loader.py  sampling.py  versioning.py
src/evalplatform/gate/: __init__.py  regression_gate.py
src/evalplatform/judge/: __init__.py  cache.py  pairwise.py  pointwise.py  ratelimit.py  retry.py  runner.py
src/evalplatform/providers/: __init__.py  base.py  dummy.py  litellm_provider.py
src/evalplatform/report/: __init__.py  dashboard.py  plots.py  report.py
src/evalplatform/stats/: __init__.py  _types.py  agreement.py  bootstrap.py  calibration.py  diversity.py  position_bias.py  predictive.py
src/evalplatform/store/: __init__.py  db.py  schema.sql
src/evalplatform/trajectory/: __init__.py  capture.py  score.py
src/ingestion/: chunker.py  loaders.py  pipeline.py  test.ipynb
tests/: conftest.py  test_cache.py  test_datasets.py  test_gate.py  test_models.py  test_providers.py  test_runner.py  test_smoke_cli.py  test_stats_importable.py  test_store.py
